--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -42,8 +42,8 @@
     <%# Hệ thống section - Admin only %>
     <%= sidebar_section "Hệ thống", ["reports.view", "logs.view", "settings.manage"] %>
     <%= sidebar_link "Cài đặt", admin_settings_path, "fa-gear", permission: "settings.manage" %>
-    <%= sidebar_link "Báo cáo", reports_path, "fa-chart-pie", permission: "reports.view" if defined?(reports_path) rescue nil %>
-    <%= sidebar_link "Nhật ký", logs_path, "fa-list-check", permission: "logs.view" if defined?(logs_path) rescue nil %>
+    <% if defined?(reports_path) %><%= sidebar_link "Báo cáo", reports_path, "fa-chart-pie", permission: "reports.view" %><% end %>
+    <% if defined?(logs_path) %><%= sidebar_link "Nhật ký", logs_path, "fa-list-check", permission: "logs.view" %><% end %>
   </nav>
 
   <%# Footer (Removed as requested) %>
